{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "96df8298-eab6-47f5-bf71-b085e5de5d87",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "d546a10f-fb95-4f7f-b7d8-c458b153f39e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "28f2ce36-9b13-4037-9e7c-f6f2f088691b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "246fff4f-9be6-4248-bbe6-8d06e8ac0b4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hit",
                    "type": "Button",
                    "id": "43e5ecc0-84ee-4bc5-a903-67762cd788e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "747f8515-bed4-47ca-acd8-01a4f742b31d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "716b8c03-f62c-40c8-9e55-e7c7c07430a2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "acbb68db-2055-46e4-bf16-a216549ce410",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6dd712bd-47cb-40cb-b9e8-4b663d01e819",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34eba93f-ca04-408d-96a0-4d7b80188927",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf7339b7-9871-4c41-acea-574512a46bb3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Hit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interface",
            "id": "b5bd0c18-9dde-459f-bafb-554cbdc91214",
            "actions": [
                {
                    "name": "MenuPanel",
                    "type": "Button",
                    "id": "75388a57-1eb8-4e12-bb91-d84ff3e92389",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d922709-3cd6-4697-85fe-17fc1c82aad2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "MenuPanel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and keyboard",
            "bindingGroup": "Mouse and keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "TouchScreen",
            "bindingGroup": "TouchScreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}